Fixed cards spacing on the homepage

--- a/style.css
+++ b/style.css
@@ -55,12 +55,16 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .article__card {
   height: 100px;
-  max-width: 600px;
-  min-width: 570px;
+  max-width: 500px;
+  width: 100%;
 
   margin: 1em;
   display: flex;
